Add working dir to service description

--- a/prometheus-switchbot-exporter.service
+++ b/prometheus-switchbot-exporter.service
@@ -5,6 +5,7 @@ After=multi-user.target
 [Service]
 Type=simple
 Restart=always
+WorkingDirectory=/home/pi/prometheus-switchbot-exporter/
 ExecStart=/home/pi/prometheus-switchbot-exporter/.venv/bin/python -m prometheus_switchbot_exporter
 
 [Install]
