Add failure handler to restart-bluetooth.service
Looks like crashes are caused by bluetooth dongle crash,
which seems to be fixed after restart of bluetooth service.

--- a/prometheus-switchbot-exporter.service
+++ b/prometheus-switchbot-exporter.service
@@ -1,11 +1,12 @@
 [Unit]
 Description=Prometheus exporter for Switchbot Sensor
 After=multi-user.target
+BindsTo=bluetooth
+OnFailure=restart-bluetooth.service
 
 [Service]
 Type=simple
 Restart=always
-WorkingDirectory=/home/pi/prometheus-switchbot-exporter/
 ExecStart=/home/pi/prometheus-switchbot-exporter/.venv/bin/python -m prometheus_switchbot_exporter
 
 [Install]
